--- a/widgets/google_column/google_column.html
+++ b/widgets/google_column/google_column.html
@@ -1,2 +1,6 @@
-<h1 class="title" data-bind="title"></h1>
+<div class="title-wrapper">
+  <h1 class="title" data-bind="title"></h1>
+  <h3 class="sub-title" data-bind="sub-title"></h3>
+</div>
+
 <div class="chart"></div>
